--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta http-equiv="x-ua-compatible" content="IE=Edge">
         <meta name="description" content="장민우와 정아라의 결혼식 안내장입니다~!"/>
         <meta property="og:image" content="assets/img/thumnail.jpg"/>
-        <title>장민우와 정아라의 결혼실</title>
+        <meta property="og:title" content="장민우와 정아라의 결혼식 안내장입니다~!">
+        <title>장민우와 정아라의 결혼식</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap Icons-->
