--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta http-equiv="x-ua-compatible" content="IE=Edge">
-        <meta name="description" content="장민우와 정아라의 결혼식 안내장입니다~!"/>
+        <meta name="description" content="장민우와 정아라의 결혼식 안내장입니다"/>
         <meta property="og:image" content="assets/img/thumnail.jpg"/>
-        <meta property="og:title" content="장민우와 정아라의 결혼식 안내장입니다~!">
-        <title>장민우와 정아라의 결혼식</title>
+        <meta property="og:title" content="Minwoo & Ara's Wedding Card<">
+        <title>Minwoo & Ara's Wedding Card</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap Icons-->
@@ -24,16 +24,15 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="#page-top">맨 위로</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#couple">신랑 & 신부</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#letter">편지</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#photo">사진</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#map">위치</a></li>
                     </ul>
-                </div>
             </div>
         </nav>
         <!-- Masthead-->
@@ -41,18 +40,20 @@
             <div class="container px-4 px-lg-5 h-100">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
-                        <h1 class="text-white font-weight-bold">Your Favorite Place for Free Bootstrap Themes</h1>
+                        <h1 class="text-white font-weight-bold">민우 & 아라</h1>
+                        <br>
+                        <h1 class="text-white font-weight-bold">결혼합니다</h1>
                         <hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!</p>
-                        <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
+                        <p class="text-white-75 mb-5">2024. 02. 24. 토요일 오전 11:30</p>
+                        <p class="text-white-75 mb-5">광주 어반브룩 3층</p>
                     </div>
                 </div>
             </div>
         </header>
-        <!-- About-->
-        <section class="page-section bg-primary" id="about">
+        <!-- couple-->
+        <section class="page-section bg-primary" id="couple">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
@@ -64,8 +65,9 @@
                 </div>
             </div>
         </section>
-        <!-- Services-->
-        <section class="page-section" id="services">
+
+        <!-- letter-->
+        <section class="page-section" id="letter">
             <div class="container px-4 px-lg-5">
                 <h2 class="text-center mt-0">At Your Service</h2>
                 <hr class="divider" />
@@ -101,8 +103,9 @@
                 </div>
             </div>
         </section>
-        <!-- Portfolio-->
-        <div id="portfolio">
+
+        <!-- photo-->
+        <div id="photo">
             <div class="container-fluid p-0">
                 <div class="row g-0">
                     <div class="col-lg-4 col-sm-6">
@@ -169,8 +172,8 @@
                 <a class="btn btn-light btn-xl" href="https://startbootstrap.com/theme/creative/">Download Now!</a>
             </div>
         </section>
-        <!-- Contact-->
-        <section class="page-section" id="contact">
+        <!-- map-->
+        <section class="page-section" id="map">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 col-xl-6 text-center">
