--- a/index.html
+++ b/index.html
@@ -57,10 +57,24 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">We've got what you need!</h2>
+                        <h2 class="text-white mt-0">신랑 & 신부</h2>
                         <hr class="divider divider-light" />
-                        <p class="text-white-75 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
-                        <a class="btn btn-light btn-xl" href="#services">Get Started!</a>
+                        <div class="row gx-2 gx-lg-5">
+                            <div class="col-lg-3 col-md-6 text-center">
+                                <div class="mt-5">
+                                    <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
+                                    <h3 class="h4 mb-2">Sturdy Themes</h3>
+                                    <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 text-center">
+                                <div class="mt-5">
+                                    <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
+                                    <h3 class="h4 mb-2">Up to Date</h3>
+                                    <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
