--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta http-equiv="x-ua-compatible" content="IE=Edge">
         <meta name="description" content="장민우와 정아라의 결혼식 안내장입니다"/>
-        <meta property="og:image" content="assets/img/thumnail.jpg"/>
-        <meta property="og:title" content="Minwoo & Ara's Wedding Card<">
-        <title>Minwoo & Ara's Wedding Card</title>
+        <meta property="og:image" content="assets/img/letter.jpg"/>
+        <meta property="og:title" content="Minwoo & Ara's Wedding Card">
+        <title> Minwoo & Ara's Wedding Card </title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap Icons-->
@@ -73,7 +73,7 @@
                         <br>
                         <p class="text-white-75 mb-1 text-center">강현욱의 '사계'</p>
                         <br>
-                        <p class="text-white-75 mb-1 text-center">축하해 주신 마을을 늘 간직하며,</p>
+                        <p class="text-white-75 mb-1 text-center">축하해 주신 마음을 늘 간직하며,</p>
                         <p class="text-white-75 mb-1 text-center">항상 행복하게 살겠습니다.</p>
                         <p class="text-white-75 mb-1 text-center">감사합니다.</p>
                     </div>
