--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="x-ua-compatible" content="IE=Edge">
         <meta name="description" content="장민우와 정아라의 결혼식 안내장입니다"/>
         <meta property="og:image" content="assets/img/letter.jpg"/>
-        <meta property="og:title" content="Minwoo & Ara's Wedding Card">
+        <meta property="og:title" content="Minwoo & Ara's Wedding Card"/>
         <title> Minwoo & Ara's Wedding Card </title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
