--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta http-equiv="x-ua-compatible" content="IE=Edge">
         <meta name="description" content="장민우와 정아라의 결혼식 안내장입니다"/>
-        <meta property="og:image" content="assets/img/letter.jpg"/>
+        <meta property="og:image" content="assets/img/thumnail_m.jpg"/>
         <meta property="og:title" content="Minwoo & Ara's Wedding Card"/>
         <title> Minwoo & Ara's Wedding Card </title>
         <!-- Favicon-->
@@ -15,6 +15,9 @@
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
         <!-- SimpleLightbox plugin CSS-->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -27,11 +30,12 @@
                 <div class="row gx-4 gx-lg-3 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
                         <h1 class="text-white font-weight-bold">장민우 & 정아라</h1>
+                        <h2 class="text-white font-weight-bold">결혼합니다</h2>
                         <hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <h3 class="text-white-75 mb-5">2024. 02. 24. 토요일 오전 11:30</h3>
-                        <h3 class="text-white-75 mb-5">광주 어반브룩 3층</h3>
+                        <h2 class="text-white-75 mb-1">2024. 02. 24. 토요일 오전 11:30</h2>
+                        <h2 class="text-white-75 mb-1">광주 어반브룩 3층</h2>
                     </div>
                 </div>
             </div>
@@ -57,25 +61,25 @@
 
         <!-- letter-->
         <section class="letter-section">
-            <div class="container px-4 px-lg-5 h-100">
-                <div class="row gx-4 gx-lg-3 justify-content-center">
-                    <div class="col-lg-2 align-self-end">
+            <div class="container px-4 px-5 h-100">
+                <div class="row-2  px-2 justify-content-center">
+                    <div class="col align-self-end">
                         <hr class="divider divider-light" />
                     </div>
-                    <div class="col-lg-1 align-self-baseline">
-                        <p class="text-white-75 mb-1 text-center">봄의 그대는 벚꽃이었고</p>
-                        <p class="text-white-75 mb-1 text-center">여름의 그대는 바람이었으며</p>
-                        <p class="text-white-75 mb-1 text-center">가을의 그대는 하늘이었고</p>
-                        <p class="text-white-75 mb-1 text-center">겨을의 그대는 하얀 눈이였다.</p>
+                    <div class="col align-self-baseline">
+                        <p class="h5 text-white-75 mb-1 text-center">봄의 그대는 벚꽃이었고</p>
+                        <p class="h5 text-white-75 mb-1 text-center">여름의 그대는 바람이었으며</p>
+                        <p class="h5 text-white-75 mb-1 text-center">가을의 그대는 하늘이었고</p>
+                        <p class="h5 text-white-75 mb-1 text-center">겨을의 그대는 하얀 눈이였다.</p>
                         <br>
-                        <p class="text-white-75 mb-1 text-center">그대는 언제나</p>
-                        <p class="text-white-75 mb-1 text-center">행복 그 자체였다.</p>
+                        <p class="h5 text-white-75 mb-1 text-center">그대는 언제나</p>
+                        <p class="h5 text-white-75 mb-1 text-center">행복 그 자체였다.</p>
                         <br>
                         <p class="text-white-75 mb-1 text-center">강현욱의 '사계'</p>
                         <br>
-                        <p class="text-white-75 mb-1 text-center">축하해 주신 마음을 늘 간직하며,</p>
-                        <p class="text-white-75 mb-1 text-center">항상 행복하게 살겠습니다.</p>
-                        <p class="text-white-75 mb-1 text-center">감사합니다.</p>
+                        <p class="h5 text-white-75 mb-1 text-center">축하해 주신 마음을 늘 간직하며,</p>
+                        <p class="h5 text-white-75 mb-1 text-center">항상 행복하게 살겠습니다.</p>
+                        <p class="h5 text-white-75 mb-1 text-center">감사합니다.</p>
                     </div>
                 </div>
             </div>
@@ -83,7 +87,7 @@
 
         <!-- Call to action-->
         <section class="page-section bg-dark text-white">
-            <div class="container px-4 px-lg-5 text-center">
+            <div class="container px-5  text-center">
                 <h5 class="mb-4">축의금은 정중히 사양하겠습니다.</h5>
                 <h5 class="mb-4">마음으로 축하해 주신다면,</h5>
                 <h5 class="mb-4">행복하게 살아감으로써 보답하겠습니다.</h5>
