--- a/index.html
+++ b/index.html
@@ -41,6 +41,24 @@
             </div>
         </header>
 
+        <section class="page-section">
+            <div class="container px-4 px-5 h-100">
+                <div class="row-2  px-2 justify-content-center">
+                    <div class="col align-self-end">
+                        <hr class="divider" />
+                    </div>
+                    <div class="text-center">
+                        <audio src="assets/bgm/TwoHearts.mp3" controls loop></audio>
+                    </div>
+                    <div class="col align-self-baseline">
+                        <br>
+                        <p class="h4 mb-2 text-center">먼저, 원하시는 분들만 ►를 눌러서 노래를 켜주세요.</p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
         <!-- couple-->
         <section class="page-section bg-primary">
             <div class="container px-lg-5">
@@ -67,19 +85,20 @@
                         <hr class="divider divider-light" />
                     </div>
                     <div class="col align-self-baseline">
-                        <p class="h5 text-white-75 mb-1 text-center">봄의 그대는 벚꽃이었고</p>
-                        <p class="h5 text-white-75 mb-1 text-center">여름의 그대는 바람이었으며</p>
-                        <p class="h5 text-white-75 mb-1 text-center">가을의 그대는 하늘이었고</p>
-                        <p class="h5 text-white-75 mb-1 text-center">겨을의 그대는 하얀 눈이였다.</p>
                         <br>
-                        <p class="h5 text-white-75 mb-1 text-center">그대는 언제나</p>
-                        <p class="h5 text-white-75 mb-1 text-center">행복 그 자체였다.</p>
+                        <p class="h4 text-white-75 mb-2 text-center">봄의 그대는 벚꽃이었고</p>
+                        <p class="h4 text-white-75 mb-2 text-center">여름의 그대는 바람이었으며</p>
+                        <p class="h4 text-white-75 mb-2 text-center">가을의 그대는 하늘이었고</p>
+                        <p class="h4 text-white-75 mb-2 text-center">겨을의 그대는 하얀 눈이였다.</p>
+                        <br>
+                        <p class="h4 text-white-75 mb-2 text-center">그대는 언제나</p>
+                        <p class="h4 text-white-75 mb-2 text-center">행복 그 자체였다.</p>
                         <br>
                         <p class="text-white-75 mb-1 text-center">강현욱의 '사계'</p>
                         <br>
-                        <p class="h5 text-white-75 mb-1 text-center">축하해 주신 마음을 늘 간직하며,</p>
-                        <p class="h5 text-white-75 mb-1 text-center">항상 행복하게 살겠습니다.</p>
-                        <p class="h5 text-white-75 mb-1 text-center">감사합니다.</p>
+                        <p class="h4 text-white-75 mb-2 text-center">축하해 주신 마음을 늘 간직하며,</p>
+                        <p class="h4 text-white-75 mb-2 text-center">항상 행복하게 살겠습니다.</p>
+                        <p class="h4 text-white-75 mb-2 text-center">감사합니다.</p>
                     </div>
                 </div>
             </div>
@@ -126,6 +145,7 @@
                 </div>
             </div>
         </section>
+
         <!-- Footer-->
         <footer class="bg-light py-5">
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Product by Minwoo & Ara &copy; 2024 </div></div>
