배경음악 수정

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                     </div>
                     <div class="col align-self-baseline">
                         <br>
-                        <p class="h4 mb-2 text-center">먼저, 원하시는 분들만 ►를 눌러서 노래를 켜주세요.</p>
+                        <p class="h4 mb-2 text-center">잔잔한 배경음악을 원하시는 분들은 </p>
+                        <p class="h4 mb-2 text-center"> ► 를 눌러주세요. </p>
                     </div>
 
                 </div>
