--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 col-xl-6 text-center">
-                        <h2 class="mt-0">일상 사진</h2>
+                        <h2 class="mt-0">사진첩</h2>
                         <hr class="divider" />
                         <div class="mt-1">
                             <img alt="Couple" class="img-fluid" src="assets/img/p_1.jpg"/>
