--- a/index.html
+++ b/index.html
@@ -167,6 +167,12 @@
                         <div class="mt-1">
                             <img alt="Couple" class="img-fluid" src="assets/img/p_4.jpg"/>
                         </div>
+                        <div class="mt-1">
+                            <img alt="Couple" class="img-fluid" src="assets/img/p_5.jpg"/>
+                        </div>
+                        <div class="mt-1">
+                            <img alt="Couple" class="img-fluid" src="assets/img/p_6.jpg"/>
+                        </div>
                     </div>
                 </div>
             </div>
