이미지 수정

--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@
                         <div class="mt-1">
                             <img alt="Couple" class="img-fluid" src="assets/img/p_6.jpg"/>
                         </div>
+                        <div class="mt-1">
+                            <img alt="Couple" class="img-fluid" src="assets/img/p_7.jpg"/>
+                        </div>
                     </div>
                 </div>
             </div>
