이미지 수정

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta http-equiv="x-ua-compatible" content="IE=Edge">
         <meta name="description" content="장민우와 정아라의 결혼식 안내장입니다"/>
-        <meta property="og:image" content="assets/img/thumnail_m.jpg"/>
+        <meta property="og:image" content="assets/img/thumnailM.jpg"/>
         <meta property="og:title" content="Minwoo & Ara's Wedding Card"/>
         <title> Minwoo & Ara's Wedding Card </title>
         <!-- Favicon-->
@@ -175,6 +175,9 @@
                         </div>
                         <div class="mt-1">
                             <img alt="Couple" class="img-fluid" src="assets/img/p_7.jpg"/>
+                        </div>
+                        <div class="mt-1">
+                            <img alt="Couple" class="img-fluid" src="assets/img/p_8.jpg"/>
                         </div>
                     </div>
                 </div>
