--- a/index.html
+++ b/index.html
@@ -78,6 +78,21 @@
             </div>
         </section>
 
+        <section class="page-section">
+            <div class="container px-4 px-5 h-100">
+                <div class="row-2  px-2 justify-content-center">
+                    <div class="col align-self-end">
+                        <hr class="divider" />
+                    </div>
+                    <div class="col align-self-baseline">
+                        <br>
+                        <p class="h1 mb-2 text-center">장안오 ・ 한미정 의 아들 장민우 </p>
+                        <p class="h1 mb-2 text-center">정승현 ・ 차애숙 의 딸  정아라</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- letter-->
         <section class="letter-section">
             <div class="container px-4 px-5 h-100">
@@ -178,6 +193,9 @@
                         </div>
                         <div class="mt-1">
                             <img alt="Couple" class="img-fluid" src="assets/img/p_8.jpg"/>
+                        </div>
+                        <div class="mt-1">
+                            <img alt="Couple" class="img-fluid" src="assets/img/p_9.jpg"/>
                         </div>
                     </div>
                 </div>
